# ppp-bot

./: Cargo.toml  Dockerfile  docker-compose.yaml
src/: config.rs  download.rs
src/bot/: bin.rs  error.rs  interaction.rs  mod.rs
src/transcript/: jobs.rs
