[package]
name = "power_pizza_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
log = "0.4"
tokio = { version = "^1.39", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.16" }
reqwest = { version = "^0.12.9", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
serde = { version = "^1.0.0" }
serde_json = "1.0.128"
pretty_env_logger = "0.5.0"
lazy_static = "1.5.0"
mongodb = "3.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3.31"
serde_with = "3.11.0"
regex = "1.11.1"
unidecode = "0.3.0"
substring = "1.4.5"
toml = "0.8.19"

[[bin]]
name = "ppp_download"
path = "src/download.rs"

[[bin]]
name = "ppp_bot"
path = "src/bot/bin.rs"

[[bin]]
name = "ppp_import"
path = "src/transcript/bin.rs"

